# df-data-governance

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
src/gov/: gov_tasks.py
