[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gov"
version = "0.0.1"
authors = [
  { name="Rajakumaran Arivumani", email="author@example.com" },
]
description = "Data governance app package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
dependencies = [
  # app specific 
]
keywords = ["data", "governance", "etl", "elt", "framework", "management"]

[project.optional-dependencies]
my-packages-local = [
  # my packages (installed locally)
  "utils",
  "metadata",
]
my-packages-container = [
  # my packages (source in container)
  "utils @ file:///packages/utils",
  "metadata @ file:///packages/df-metadata",
]
test = [
  # standard dev tools
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "ipython",
]
all-dev = [
  "gov[my-packages-local, test]"
  ]
all = [
  "gov[my-packages-container]"
  ]

[project.scripts]

[project.urls]
Homepage = "https://profile.rajakumaran.in"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dexplorer/df-data-governance.git"
Issues = "https://github.com/dexplorer/df-data-governance/issues"
Changelog = "https://github.com/dexplorer/df-data-governance/blob/master/CHANGELOG.md"
